# dfptree

./: README.md
prototype/config/: init.xml  merge.xml  reduce.xml  run.init.xml  run.merge.xml  run.reduce.xml  run.sum.xml  run.tree.xml  sum.xml  tree.xml
prototype/doc/: TODO.txt
prototype/src/: CMakeLists.txt
prototype/src/fptree/: __fptree__.hpp  __node__.hpp  cfptree.hpp  cnode.hpp  fptree.hpp  node.hpp
prototype/src/init/: CMakeLists.txt  init.cpp  init.hpp
prototype/src/merge/: CMakeLists.txt  merge.cpp  merge.hpp
prototype/src/process/: CMakeLists.txt  __message__.hpp  __process__.hpp  __serialize__.hpp  label.cpp  label.hpp  packer.hpp  unpacker.hpp
prototype/src/reduce/: CMakeLists.txt  reduce.cpp  reduce.hpp
prototype/src/sum/: CMakeLists.txt  sum.cpp  sum.hpp
prototype/src/tree/: CMakeLists.txt  tree.cpp  tree.hpp
prototype/src/utility/: memory.hpp  reader.hpp
